# xcelios

./: .bumpversion.cfg  .editorconfig  .gitignore  README.rst  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
tests/: __init__.py  test_marker.py  test_position.py  test_range.py  test_table.py
tests/testfiles/: Test1.xlsx
tests/testfiles/json/: people.json  prices.json
xcelios/: position.py  table.py  xcelios.py
