[metadata]
name = xcelios
version = 0.0.1
description = OpenPyXL Excel templating tool
long_description = file: README.rst
long_description_content_type: text/x-rst
url = https://github.com/Theta-Dev/xcelios
author = ThetaDev
license = MIT
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
openpyxl~=3.0.7
python_requires = >=3.6

[options.packages.find]
where = .
include = xcelios
exclude = *

[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:xcelios/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[coverage:run]
branch = True

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
    pass
